tests/samples/negative/generics/non_generic_type_args.ax
module non_generic_type_args;

struct Plain {
    value: i32;
}

fn main() -> i32 {
    let value: Plain<i32> = Plain<i32> { value: 1 };
    return value.value;
}
